<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="300dp"
    android:layout_height="wrap_content"
    app:cardCornerRadius="20dp"
    app:cardElevation="4dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:background="@color/teal_700"
        android:padding="24dp">

        <ImageView
            android:id="@+id/ivError"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:src="@drawable/logo"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/tvTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/sora"
            android:text="@string/title_registrationError"
            android:textColor="@color/white"
            android:textSize="24sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvMessage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/sora_light"
            android:gravity="center"
            android:text="@string/error_message"
            android:textColor="@color/white"
            android:textSize="16sp" />

        <Button
            android:id="@+id/btnTryAgain"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:backgroundTint="#C62E2E"
            android:fontFamily="@font/sora"
            android:text="@string/try_again"
            android:textColor="@color/white" />

    </LinearLayout>

</androidx.cardview.widget.CardView>